Avoid too wide, clipped content area in Blink

--- a/byceps/static/style/party.css
+++ b/byceps/static/style/party.css
@@ -586,7 +586,7 @@ form.board-posting-create-form-inline .label {
 }
 
 .user-profile-secondary {
-  flex: 1 0 auto;
+  flex: 1 0;
 }
 
 .user-profile-details {
